crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_case_null_default_switch_label.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class NullDefaultSwitchLabel {
  int method(Object value) {
    return switch (value) {
      case null, default -> 0;
    };
  }
}

diagnostics:
(none)
