crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_cast_expression_whose_operand_is_lambda.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class CastLambda {
  void method() {
    Runnable runnable =
      (Runnable)
        () -> {
        };
  }
}

diagnostics:
(none)
