crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_class_instance_creation_statement_expression.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class CreationStatementExpression {
  void method() {
    new Object();
    new Runnable() {
      public void run() {
      }
    };
  }
}

diagnostics:
(none)
