crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_class_instance_creation_with_constructor_type_arguments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ConstructorTypeArgumentsCreation {
  void method() {
    Object box = new <String> Box("value");
  }
}

class Box<T> {
  <U> Box(U value) {
  }
}

diagnostics:
(none)
