crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_class_type_type_arguments_outside_name_nodes.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ClassTypeTypeArgumentsOutsideNameNodes {
  java.util.Map<String>.Entry<Integer> value;
}

diagnostics:
(none)
