crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_compact_compilation_unit_with_imports_and_methods.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import java.util.List;

void main() {
  System.out.println(List.of());
}

diagnostics:
(none)
