crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_compound_assignment_operators.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class CompoundAssignments {
  void method() {
    int value = 1;
    value += 2;
    value <<= 1;
    value >>>= 1;
  }
}

diagnostics:
(none)
