crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_constructor_declaration_body_as_constructor_body.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ConstructorBodyShape {
  ConstructorBodyShape() {
    this(0);
  }

  ConstructorBodyShape(int value) {
  }
}

diagnostics:
(none)
