crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_constructor_invocation_arguments_with_nested_initializers.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ConstructorInvocationArguments {
  ConstructorInvocationArguments(String value) {
    this(new String[] { value }, true, null);
  }

  ConstructorInvocationArguments(String[] values, boolean flag, Object extra) {
  }
}

diagnostics:
(none)
