crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_constructor_receiver_parameter.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ConstructorReceiverOuter {
  class ConstructorReceiverInner {
    ConstructorReceiverInner(
      ConstructorReceiverOuter ConstructorReceiverOuter.this
    ) {
    }
  }
}

diagnostics:
(none)
