crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_context_specific_modifier_productions.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum ModifiedEnum {
  @Marker
  VALUE,
}

class ModifiedConstructor {
  public ModifiedConstructor() {
  }
}

interface ModifiedInterface {
  public static final int X = 1;
}

@interface ModifiedAnnotation {
  @Marker
  String value();
}

@interface Marker {
}

diagnostics:
(none)
